<resources>
    <string name="app_name">Simple Reminders</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Reminders</string>
    <string name="second_fragment_label">Create a Reminder</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="reminder_name">Reminder Name</string>
    <string name="high">High</string>
    <string name="custom_options">Custom Options</string>
    <string name="quick_set">Quick Set</string>
    <string name="confirm">Confirm</string>
    <string name="medium">Medium</string>
    <string name="priority_level">Priority Level</string>
    <string name="time">Time</string>
    <string name="low">Low</string>
    <string name="advance_options">Advance Options</string>
    <string name="there_are_no_reminders">There are no reminders</string>
    <string name="add_reminder_btn">+</string>
    <string name="untitled_reminder">Untitled Reminder</string>
    <string name="priority_medium">Priority: Medium</string>
</resources>