<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reminderNameTxt"
        android:layout_width="255dp"
        android:layout_height="38dp"
        android:text="@string/reminder_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/quickSetBtn"
        android:layout_width="122dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:onClick="quickSetOpenDialog"
        android:text="@string/quick_set"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTxT"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/advanceOptionsBtn"
        android:layout_width="127dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:onClick="advanceOptionsBtnHandler"
        android:text="@string/advance_options"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toEndOf="@+id/quickSetBtn"
        app:layout_constraintTop_toBottomOf="@+id/timeTxT"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/timeTxT"
        android:layout_width="271dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityLevels" />

    <RadioGroup
        android:id="@+id/priorityLevels"
        android:layout_width="283dp"
        android:layout_height="80dp"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityLvlTxt"
        app:layout_constraintVertical_bias="0.053"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/priorityLowBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingEnd="10dp"
            android:text="@string/low"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/priorityMediumBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/medium"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/priorityHighBtn"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="@string/high"
            android:textAlignment="center" />
    </RadioGroup>

    <TextView
        android:id="@+id/priorityLvlTxt"
        android:layout_width="271dp"
        android:layout_height="39dp"
        android:layout_marginTop="132dp"
        android:text="@string/priority_level"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderNameTxt" />

    <AutoCompleteTextView
        android:id="@+id/reminderNameTextArea"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/priorityLvlTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderNameTxt"
        app:layout_constraintVertical_bias="0.488"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginBottom="64dp"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_second"
        app:layout_constraintVertical_bias="0.844"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dateAndTimeText_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:onClick="displayDateAndTime"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTxT"
        app:layout_constraintVertical_bias="0.325" />

</androidx.constraintlayout.widget.ConstraintLayout>